--- a/homework6/homework6.csproj
+++ b/homework6/homework6.csproj
@@ -38,11 +38,13 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="chief.cs" />
+        <Compile Include="Chief.cs" />
         <Compile Include="Director.cs" />
-        <Compile Include="employee.cs" />
+        <Compile Include="Employee.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Statement.cs" />
+        <Compile Include="Worker.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
